myself/ingress/ingress-resource/ingress-wear-watch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
  labels:
    name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - path: "/wear" # split traffic by url
        backend:
          serviceName: wear-service
          servicePort: 80
      - path: "/watch"
        backend:
          serviceName: watch-service
          servicePort: 80
