myself/ingress/ingress-resource/ingress-wear.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service # single backend service
    servicePort: 80
